Closed
Bug 1311368
Opened 9 years ago
Closed 9 years ago
Video content is not always loaded on NASA Television
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(firefox49 wontfix, firefox50 wontfix, firefox51 wontfix, firefox52 verified, firefox-esr52 fixed, firefox53 verified, firefox54 verified)
VERIFIED
FIXED
mozilla54
People
(Reporter: JuliaC, Assigned: tschneider)
References
()
Details
(Keywords: regression, site-compat)
Attachments
(1 file)
|
5.09 KB,
patch
|
tschneider
:
review+
gchang
:
approval-mozilla-aurora+
jcristau
:
approval-mozilla-beta+
gchang
:
approval-mozilla-release-
|
Details | Diff | Splinter Review |
[Note]:
- This issue is not e10s related
[Affected versions]:
- latest Nightly 52.0a1 (2016-10-18)
- latest Aurora 51.0a2 (2016-10-19)
- 50.0b8 build1 (20161017130949)
- 49.0.2 build1 (20161018030522)
[Affected platforms]:
- Windows 10 x64
- Mac OS X 10.11.6
- Ubuntu 14.04 x86
[Steps to reproduce]:
1. Launch Firefox
2. Go to http://www.nasa.gov/multimedia/nasatv/index.html#public
3. Wait for the video content to be loaded
4. Refresh several times the same page and wait for the video content to be loaded
[Expected result]:
- The video content is properly loaded every time the page is accessed
[Actual result]:
- The video content is not always loaded (about 40% of total accessing number) - it remains in a continuous loading process
[Regression range]:
- I will investigate this as soon as possible
- So far I can tell that the issue is not reproducible on 46.0a1 (2016-01-01)
| Reporter | ||
Updated•9 years ago
|
| Reporter | ||
Comment 1•9 years ago
|
||
Sorry, I forgot to mention: this is also reproducible on 49.0.1-build3 (20160922113459), so it's not a recent regression.
Comment 2•9 years ago
|
||
This is Flash, so I'm going to preliminarily call this a plugin-related bug. Although failure to load could also be networking.
Component: ImageLib → Plug-ins
Comment 3•9 years ago
|
||
I can reproduce on Windows10 Nightly52.0a1.
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=8db356a0d5b5e3af4aeba8fc20baf45289acca92&tochange=f0bd5218a80748df118c8a14971cff2d260813a8
Seems triggered by: f0bd5218a807 Tobias Schneider — Bug 1275591 - Enable plugin content blocking by default. r=bsmedberg
Blocks: 1275591
Updated•9 years ago
|
Keywords: regressionwindow-wanted → site-compat
Comment 4•9 years ago
|
||
Regression window w/ browser.safebrowsing.blockedURIs.enabled=true and e10s disabled/enabled:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=240f4848ed64b72befa92175acb404e22ac148fb&tochange=3a3f45f80219bbc3d9951eef0f0c1d9b00c0ab56
Regressed by: 3a3f45f80219 Tobias Schneider — Bug 1268120 - Make plugin content blocking work on e10s. r=francois
It is strange that the patch affect on non-e10s.
Blocks: 1268120
Flags: needinfo?(tschneider)
Updated•9 years ago
|
Version: Trunk → 49 Branch
Too late to fix in 50.1.0 release
Comment 6•9 years ago
|
||
Tobias, we're running low on time to fix this on 51. Have you had any chance to look at this recently?
status-firefox53:
--- → affected
Comment 7•9 years ago
|
||
Jet, can you please help find an owner to investigate this?
Comment 8•9 years ago
|
||
Tobias: please review and test this patch. It fixes the bug but I haven't tested it against your plugin-blocker tests. Please help get this one landed. Thanks!
Flags: needinfo?(bugs)
Updated•9 years ago
|
Attachment #8834196 -
Flags: review?(tschneider)
| Assignee | ||
Updated•9 years ago
|
Attachment #8834196 -
Flags: review?(tschneider) → review+
| Assignee | ||
Comment 9•9 years ago
|
||
Can confirm that this fixes the issue. Also, all uri-blocking and safe-browsing tests are passing with this patch.
Flags: needinfo?(tschneider)
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Comment 10•9 years ago
|
||
Tobias: can you set up the appropriate uplifts too?
Assignee: nobody → tschneider
Comment 11•9 years ago
|
||
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/4fd8f1f47a32
Fix ShouldBlockContent logic when content blocking is enabled. r=tobytailor
Keywords: checkin-needed
Comment 12•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
| Assignee | ||
Comment 13•9 years ago
|
||
Comment on attachment 8834196 [details] [diff] [review]
Fixes ShouldBlockContent logic when content blocking is enabled.
Approval Request Comment
[Feature/regressing bug #]: 1311368
[User impact if declined]: Failing content.
[Describe test coverage new/current, TreeHerder]: Successfully tested in 540a1.
[Risks and why]: Prevents some video content from loading.
[String/UUID change made/needed]: No string or UUID changes.
Attachment #8834196 -
Flags: approval-mozilla-release?
Attachment #8834196 -
Flags: approval-mozilla-beta?
Attachment #8834196 -
Flags: approval-mozilla-aurora?
Comment 14•9 years ago
|
||
Comment on attachment 8834196 [details] [diff] [review]
Fixes ShouldBlockContent logic when content blocking is enabled.
Fix a video content loading issue on nasa. Aurora53+.
Attachment #8834196 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 15•9 years ago
|
||
| bugherder uplift | ||
Comment 16•9 years ago
|
||
Comment on attachment 8834196 [details] [diff] [review]
Fixes ShouldBlockContent logic when content blocking is enabled.
fix content blocking issue in beta52.
Attachment #8834196 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 17•9 years ago
|
||
| bugherder uplift | ||
Comment 18•9 years ago
|
||
Iulia, could you please confirm this fix?
Thank you!
Flags: needinfo?(iulia.cristescu)
Comment 19•9 years ago
|
||
| bugherder uplift | ||
status-firefox-esr52:
--- → fixed
| Reporter | ||
Comment 20•9 years ago
|
||
(In reply to Cornel Ionce [QA] (:cornel_ionce) from comment #18)
> Iulia, could you please confirm this fix?
> Thank you!
I can confirm that the issue is fixed on 54.0a1 (2017-02-20), 53.0a2 (2017-02-20), 52.0b8 (20170220070057) using Windows 10 x64, Mac OS X 10.11.6 and Ubuntu 16.04 x86.
Status: RESOLVED → VERIFIED
Flags: needinfo?(iulia.cristescu)
Comment 21•9 years ago
|
||
Comment on attachment 8834196 [details] [diff] [review]
Fixes ShouldBlockContent logic when content blocking is enabled.
We don't have then plan to have dot release for 51. Rel51-.
Attachment #8834196 -
Flags: approval-mozilla-release? → approval-mozilla-release-
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•