Bug 1311368 - Fix ShouldBlockContent logic when content blocking is enabled. r=tobytailor, a=jcristau